turtle/huisje.turtle.txt
>>> turtle.forward(100)
>>> turtle.right(100)
>>> turtle.forward(100)
>>> turtle.backward(100)
>>> turtle.undo()
>>> turtle.undo()
>>> turtle.undo()
>>> turtle.right(90)
>>> turtle.forward(100)
>>> turtle.right(90)
>>> turtle.forward(100)
>>> turtle.right(90)
>>> turtle.forward(100)
>>> turtle.right(35)
>>> turtle.forward(100)
>>> turtle.goto(100.00
...
... turtle
  File "<stdin>", line 3
    turtle
    ^
SyntaxError: invalid syntax
>>> turtle.goto(100,00)
>>> turtle.pos()
(100.00,0.00)
>>> turtle.home()
>>> turtle.right(90)
>>> turtle.forward(100)
>>> turtle.forward(20)
>>> turtle.undo()
>>> turtle.right(90)
>>> turtle.right(90)
>>> turtle.right(90)
>>> turtle.forward(20)
>>> turtle.left(90)
>>> turtle.forward(60)
>>> turtle.right(90)
>>> turtle.forward(15)
>>> turtle.forward(15)
>>> turtle.right(90)
>>> turtle.forward(60)
>>> turtle.forward(50)
>>> turtle.undo()
>>> turtle.right(90)
>>> turtle.left(90)
>>> turtle.left(90)
>>> turtle.forward(20)
>>> turtle.left(90)
>>> turtle.pendown()
>>> turtle.forward(30)
>>> turtle.undo()
>>> turtle.penup()
>>> turtle.forward(30)
>>> turtle.pendown()
>>> turtle.forward(30)
>>> turtle.right(90)
>>> turtle.forward(15)
>>> turle.undo()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'turle' is not defined
>>> turtle.undo()
>>> turtle.forward(20)
>>> turtle.right(90)
>>> turtle.forward(30)
>>> turtle.right(90)
>>> turtle.forward(20)
>>> turtle.right(180)
>>> turtle.forward(10)
>>> turtle.right(90)
>>> turtle.left(90)
>>> turtle.left(90)
>>> turtle.forward(30)
>>> turtle.right(90)
>>> turtle.forward(10)
>>> turtle.right(90)
>>> turtle.forward(10)
>>> turtle.right(90)
>>> turtle.left(90)
>>> turtle.forward(10)
>>> turtle.left(90)
>>> turtle.undo()
>>> turtle.undo()
>>> turtle.forward(5)
>>> turtle.left(90)
>>> turtle.undo()
>>> turtle.right(90)
>>> turtle.forward(20)
>>> turle.penup()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'turle' is not defined
>>> turtle.penup()
>>> turtle.forward(50)
>>> turtle.right(90)
>>> turtle.undo()
>>> turtle.left(90)
>>> turtle.forward(20)
>>> turtle.right(90)
>>> turtle.undo()
>>> turtle.left(90)
>>> turtle.forward(10)
>>> turtle.pendown()
>>> turtle.dot(4)
>>> turtle.undo()
>>> turtle.undo()
>>> turtle.undo()
>>> turtle.forward(5)
>>> turtle.dot(4)
>>> turtle.penup()
>>> turtle.forward(10)
>>> turtle.forward(10)
>>> turtle.pos(100,00)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: pos() takes 0 positional arguments but 2 were given
>>> turtle.goto(100,00)
>>> turtle.right(90)
>>> turtle.right(90)
>>> turtle.right(90)
>>> turtle.forward(50)
>>> turtle.right(90)
>>> turtle.right(90)
>>> turtle.right(90)
>>> turtle.forward(10)
>>> turtle.forward(10)
>>> turtle.forward(5)
>>> turtle.right(90)
>>> turtle.forward(20)
>>> turtle.undo()
>>> turtle.pendown()
>>> turtle.forward(20)
>>> turtle.right(90)
>>> turtle.forward(20)
>>> turtle.right(90)
>>> turtle.goto(100,00)
>>> turtle.penup()
>>> turtle.right(180)
>>> turtle.forward(500)
>>> turtle.undo()